# toxicshield

./: .env.example  .gitignore  README.md
backend/: main.py  pyproject.toml
backend/decision_analyst/: README.md  decision_analyst.py  test_decision_analyst.py
backend/vectordb/: README.md  config.py  test_vectordb.py  vectordb.py
data/: dataset-analytics.ipynb
docs/diagrams/: architecture.wsd  seq_diagram_cloud_ai.wsd  seq_diagram_edge_ai.wsd
extension/: README.md  build.ts  manifest.json  package.json  tsconfig.json
extension/src/: background.ts  content.ts  ml-worker.ts  sidepanel.html  sidepanel.ts
