[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "demoji>=1.1.0",
    "fastapi>=0.135.3",
    "fastembed>=0.8.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "uvicorn>=0.42.0",
]
